fix : edit in body overflow

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -9,6 +9,7 @@ html {
   -webkit-text-size-adjust: 100%;
     height: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 body {
